--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/jira-client": "^6.21.3",
     "@types/lodash.trim": "^4.5.6",
     "@types/node": "^18.11.10",
+    "@typescript-eslint/eslint-plugin": "^5.46.0",
     "@typescript-eslint/parser": "^5.46.0",
     "@vercel/ncc": "^0.31.1",
     "eslint": "^7.32.0",
